# lingo-leap

./: .gitignore  Dockerfile.linux  README.md  docker-compose.linux.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-macos.yml  build.yml
scripts/: test-linux-stt.sh
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_session.rs  lib.rs  main.rs  whisper_stt.rs
src/__tests__/: integration.test.tsx
src/components/: ActionButtons.test.tsx  ActionButtons.tsx  ClearInputButton.test.tsx  ClearInputButton.tsx  CopyButton.test.tsx  CopyButton.tsx  CorrectionTabs.test.tsx  CorrectionTabs.tsx  CorrectionView.test.tsx  CorrectionView.tsx  InlineDiff.test.tsx  InlineDiff.tsx  LanguageSelector.test.tsx  LanguageSelector.tsx  MainWindow.test.tsx  MainWindow.tsx  MicButton.test.tsx  MicButton.tsx  MicModeIndicator.tsx  ModeSelector.test.tsx  ModeSelector.tsx  SettingsPanel.test.tsx  SettingsPanel.tsx  SetupWizard.test.tsx  SetupWizard.tsx  SpeechPreview.test.tsx  SpeechPreview.tsx  SpeedSelector.tsx  TranslationView.test.tsx  TranslationView.tsx  VoiceIsolationPrompt.tsx
src/hooks/: useAppUpdater.ts  useAudioDevices.test.ts  useAudioDevices.ts  useAudioOutputDevices.ts  useCorrection.test.ts  useCorrection.ts  useLanguageDetect.test.ts  useLanguageDetect.ts  useOllama.test.ts  useOllama.ts  useSpeechToText.test.ts  useSpeechToText.ts  (+8 more)
(+37 files in other folders)
